// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser print statements parses print lists with no separator 1`] = `
Array [
  Print {
    "expressions": Array [
      Literal {
        "value": BrsString {
          "kind": 2,
          "value": "Foo",
        },
      },
      Literal {
        "value": BrsString {
          "kind": 2,
          "value": "bar",
        },
      },
      Literal {
        "value": BrsString {
          "kind": 2,
          "value": "baz",
        },
      },
    ],
  },
]
`;

exports[`parser print statements parses print lists with separators 1`] = `
Array [
  Print {
    "expressions": Array [
      Literal {
        "value": BrsString {
          "kind": 2,
          "value": "Foo",
        },
      },
      1,
      Literal {
        "value": BrsString {
          "kind": 2,
          "value": "bar",
        },
      },
      1,
      Literal {
        "value": BrsString {
          "kind": 2,
          "value": "baz",
        },
      },
    ],
  },
]
`;

exports[`parser print statements parses singular print statements 1`] = `
Array [
  Print {
    "expressions": Array [
      Literal {
        "value": undefined,
      },
    ],
  },
]
`;
